# locus

./: .gitignore  .npmrc  DESIGN.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_MANAGEMENT_RESEARCH.md  PRODUCTIVITY_RESEARCH.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.cursor/rules/: contextual-help.mdc  design-specification.mdc  domain-models.mdc  i18n-localization.mdc  implementation-tracking.mdc  pre-push-checklist.mdc  project-architecture.mdc  react-components.mdc  rust-backend.mdc  scalability.mdc  storybook-standards.mdc  tailwind-v4-variables.mdc  testing-standards.mdc  typescript-standards.mdc  view-pane-modifier-clicks.mdc
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css  tiptap-modules.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql  0002_notes.sql  0003_entities.sql  0004_entity_type_icons.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/db/: connection.rs  fts.rs  migration.rs  mod.rs  pagination.rs
apps/desktop/src-tauri/src/entities/: commands.rs  lql.rs  mod.rs  repository.rs
apps/desktop/src-tauri/src/notes/: commands.rs  repository.rs
apps/storybook/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/src/: TokenCatalog.stories.tsx  (+1 more)
(+24 files in other folders)
