[package]
name = "locus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
